cluster/apps/default/navidrome/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - name: http
              containerPort: 4533
          volumeMounts:
            - name: config
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: music
          nfs:
            server: "glacier.lab.${SECRET_LAB_DOMAIN}"
            path: /mnt/tank/media/music
