cluster/apps/default/navidrome/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      targetPort: http
  selector:
    app.kubernetes.io/name: navidrome
