cluster/apps/default/navidrome/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "music"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd"
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - navidrome.${SECRET_LAB_DOMAIN}
  rules:
    - host: navidrome.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: http
